--- a/project.ipynb
+++ b/project.ipynb
@@ -1,8 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f7f09751",
+   "metadata": {},
+   "source": [
+    "**LINK TO GITHUB WITH APPROPRIATELY FORMATTED DATA BECAUSE CANVAS WOULDN'T LET ME SUBMIT FOLDERS:**\n",
+    "https://github.com/csavag/LING-401-final-project.git"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
+   "id": "cb055e73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import nltk\n",
+    "import string\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import word_tokenize, FreqDist\n",
+    "from functools import reduce\n",
+    "import statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "f521d8bc",
    "metadata": {},
    "outputs": [],
@@ -22,24 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "cb055e73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import re\n",
-    "import nltk\n",
-    "import string\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk import word_tokenize, FreqDist\n",
-    "from functools import reduce\n",
-    "import statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "cc8b3a08",
    "metadata": {},
    "outputs": [],
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "4ecb0f21",
    "metadata": {},
    "outputs": [],
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "id": "de9679eb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "fbbf9524",
    "metadata": {},
    "outputs": [],
@@ -156,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "2eb48ae6",
    "metadata": {},
    "outputs": [],
@@ -170,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "b0fad8b8",
    "metadata": {},
    "outputs": [],
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "f8fca465",
    "metadata": {},
    "outputs": [],
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "a9f37818",
    "metadata": {},
    "outputs": [],
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "e4ce7d8b",
    "metadata": {},
    "outputs": [],
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "e137a0f3",
    "metadata": {},
    "outputs": [
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "3b3c5e96",
    "metadata": {},
    "outputs": [
@@ -297,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "56988245",
    "metadata": {},
    "outputs": [
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "c0380745",
    "metadata": {},
    "outputs": [
@@ -347,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "ea448beb",
    "metadata": {},
    "outputs": [
@@ -355,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(',', 5455), ('.', 4332), ('!', 992), (';', 593), ('?', 312), (':', 164), ('(', 116), (')', 116), (\"'\", 89), ('-', 23), ('*', 6), ('&', 1), ('}', 1)]\n"
+      "[(',', 5455), ('.', 4332), ('!', 992), (';', 593), ('?', 312), (':', 164), ('(', 116), (')', 116), (\"'\", 89), ('-', 23)]\n"
      ]
     }
    ],
@@ -364,7 +373,7 @@
     "def most_frequent_punct(text_df, text):\n",
     "    this_df = text_df[text_df[\"book\"] == text]\n",
     "    this_punct = word_tokenize(\" \".join(this_df[\"punct\"]))\n",
-    "    this_punct_freq = FreqDist(this_punct).most_common(25)\n",
+    "    this_punct_freq = FreqDist(this_punct).most_common(10)\n",
     "    return this_punct_freq\n",
     "hobbit_mfp = most_frequent_punct(Tolkien_df, \"Hobbit\")\n",
     "print(hobbit_mfp)"
@@ -372,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "id": "7bd30fef",
    "metadata": {},
    "outputs": [],
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "3e955854",
    "metadata": {},
    "outputs": [],
@@ -406,7 +415,7 @@
     "        self.sentence_length = sum(book.sentence_length[0] for book in books) / len(books)\n",
     "        self.most_common_words = FreqDist(word for book in books for word, count in book.most_common_words for _ in range(count)).most_common(50)\n",
     "        self.most_common_stopwords = FreqDist(word for book in books for word, count in book.most_common_stopwords for _ in range(count)).most_common(50)\n",
-    "        self.most_common_punct = FreqDist(word for book in books for word, count in book.most_common_punct for _ in range(count)).most_common(25)\n",
+    "        self.most_common_punct = FreqDist(word for book in books for word, count in book.most_common_punct for _ in range(count)).most_common(10)\n",
     "\n",
     "    def get_data(self):\n",
     "        return([self.vocab_richness, self.sentence_length, self.most_common_words, self.most_common_stopwords, self.most_common_punct])\n"
@@ -414,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "581e12a2",
    "metadata": {},
    "outputs": [],
@@ -444,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "id": "2bd1770c",
    "metadata": {},
    "outputs": [],
@@ -456,26 +465,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4b77293a",
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "cbb933f5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tolkien\n",
+      "Hobbit\n",
+      "Fellowship\n",
+      "Two_Towers\n",
+      "Return\n",
+      "\n",
+      "Lewis\n",
+      "Lion\n",
+      "Caspian\n",
+      "\n",
+      "Travers\n",
+      "Poppins\n",
+      "\n",
+      "Matheson\n",
+      "Legend\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "**Metrices for comparison:**\n",
-    "\n",
-    "Vocabulary richness\n",
-    "\n",
-    "Average sentence length\n",
-    "\n",
-    "50 most common words\n",
-    "\n",
-    "50 most common stopwords\n",
-    "\n",
-    "25 most common punctuative items"
+    "for author in authors:\n",
+    "    print(author.name)\n",
+    "    for book in author.books:\n",
+    "        print(book.title)\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "id": "c169525c",
    "metadata": {},
    "outputs": [],
@@ -489,14 +517,14 @@
     "    words_diff_set = set(word for word, count in book1_data[2]) & set(word for word, count in book2_data[2])\n",
     "    stopwords_diff = len(set(word for word, count in book1_data[3]) & set(word for word, count in book2_data[3])) / 50\n",
     "    stopwords_diff_set = set(word for word, count in book1_data[3]) & set(word for word, count in book2_data[3])\n",
-    "    punct_diff = len(set(word for word, count in book1_data[4]) & set(word for word, count in book2_data[4])) / 25\n",
+    "    punct_diff = len(set(word for word, count in book1_data[4]) & set(word for word, count in book2_data[4])) / 10\n",
     "    punct_diff_set = set(word for word, count in book1_data[4]) & set(word for word, count in book2_data[4])\n",
     "    return [vocab_diff, sent_len, words_diff, words_diff_set, stopwords_diff, stopwords_diff_set, punct_diff, punct_diff_set]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "id": "e6bfc08c",
    "metadata": {},
    "outputs": [],
@@ -528,14 +556,14 @@
     "    stopwords_diff = len(reduce(lambda x, y: x & y, (row[5] for row in values))) / 50\n",
     "\n",
     "    # Proportion of 25 most common puncts shared by all compared texts\n",
-    "    puncts_diff = len(reduce(lambda x, y: x & y, (row[7] for row in values))) / 25\n",
+    "    puncts_diff = len(reduce(lambda x, y: x & y, (row[7] for row in values))) / 10\n",
     "\n",
     "    return (vocab + lent + words_diff + stopwords_diff + puncts_diff) / 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "id": "6aeeb6ed",
    "metadata": {},
    "outputs": [],
@@ -562,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "id": "7c7822a9",
    "metadata": {},
    "outputs": [
@@ -570,10 +598,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author of this text is most likely Tolkien with similarity 75.16 %\n",
-      "The author of this text is most likely Lewis with similarity 70.25 %\n",
-      "The author of this text is most likely Travers with similarity 66.46 %\n",
-      "The author of this text is most likely Matheson with similarity 69.81 %\n"
+      "The author of this text is most likely Tolkien with similarity 83.96 %\n",
+      "The author of this text is most likely Lewis with similarity 78.65 %\n",
+      "The author of this text is most likely Travers with similarity 73.66 %\n",
+      "The author of this text is most likely Matheson with similarity 77.01 %\n"
      ]
     }
    ],
